force-app/main/default/objects/Case_Category__c/Case_Category__c.object-meta.xml
<CustomObject>
    <description>Capture multiple case categories</description>
    <label>Case Category</label>
    <nameField>
        <displayFormat>CAT{YYYY}/{000000}</displayFormat>
        <label>Case Category Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>