force-app/main/default/objects/Case_Category__c/fields/Classification__c.field-meta.xml
<CustomField>
    <fullName>Classification__c</fullName>
    <label>Classification</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sub_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Classification</valueSetName>
    </valueSet>
</CustomField>