force-app/main/default/objects/Case_Category__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <description>QCC: The Contact associated to the Case</description>
    <formula>Case__r.Contact.FirstName+ &apos; &apos; + Case__r.Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Name</label>
    <type>Text</type>
</CustomField>