force-app/main/default/objects/Case_Category__c/fields/Resolve_Case_Category_Number__c.field-meta.xml
<CustomField>
    <fullName>Resolve_Case_Category_Number__c</fullName>
    <description>Added for datamigration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolve Case Category Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>