force-app/main/default/objects/Case_Category__c/fields/Resolve_CaseCategoryID__c.field-meta.xml
<CustomField>
    <fullName>Resolve_CaseCategoryID__c</fullName>
    <description>Resolve CaseCategoryID - For data migration</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolve CaseCategoryID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>