force-app/main/default/objects/Case_Category__c/fields/Resolve_CreatedBy__c.field-meta.xml
<CustomField>
    <fullName>Resolve_CreatedBy__c</fullName>
    <description>Resolve CreatedBy</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolve CreatedBy</label>
    <length>100</length>
    <type>Text</type>
</CustomField>