force-app/main/default/objects/Case_Category__c/validationRules/Restrict_Type_to_Parent_Case_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Type_to_Parent_Case_Type</fullName>
    <active>true</active>
    <description>QCC: Restricts Type value to Parent Case Type</description>
    <errorConditionFormula>TEXT(Type__c ) &lt;&gt;  TEXT(Case__r.Type)</errorConditionFormula>
    <errorMessage>Case Category Type should be of parent Case Type</errorMessage>
</ValidationRule>